// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Item (unit tests) when initialized with counter attribute should match the snapshot 1`] = `
<kv-tree-item counter="32" expand-icon="kv-arrow-drop-up" label="Node Title" labels-size="small">
  <mock:shadow-root>
    <div class="node-container">
      <div class="node-wrapper">
        <a class="node-content-wrapper">
          <div class="labels labels-small">
            <kv-tooltip disabled="" text="Node Title" truncate="">
              <div class="title title-small">
                Node Title
              </div>
            </kv-tooltip>
          </div>
          <div class="right-indicators">
            <div class="alarm-bubble">
              <kv-badge>
                32
              </kv-badge>
            </div>
          </div>
        </a>
      </div>
      <div class="children" part="children" style="display: none;">
        <slot name="child-slot"></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-tree-item>
`;

exports[`Tree Item (unit tests) when initialized with disabled attribute should match the snapshot 1`] = `
<kv-tree-item disabled="" expand-icon="kv-arrow-drop-up" label="Node Title" labels-size="small">
  <mock:shadow-root>
    <div class="node-container">
      <div class="disabled node-wrapper">
        <a class="disabled node-content-wrapper">
          <div class="labels labels-small">
            <kv-tooltip disabled="" text="Node Title" truncate="">
              <div class="title title-small">
                Node Title
              </div>
            </kv-tooltip>
          </div>
          <div class="right-indicators"></div>
        </a>
      </div>
      <div class="children" part="children" style="display: none;">
        <slot name="child-slot"></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-tree-item>
`;

exports[`Tree Item (unit tests) when initialized with preventDefault prop should match the snapshot 1`] = `
<kv-tree-item expand-icon="kv-arrow-drop-up" label="Node Title" labels-size="small" prevent-default="">
  <mock:shadow-root>
    <div class="node-container">
      <div class="node-wrapper">
        <a class="node-content-wrapper">
          <div class="labels labels-small">
            <kv-tooltip disabled="" text="Node Title" truncate="">
              <div class="title title-small">
                Node Title
              </div>
            </kv-tooltip>
          </div>
          <div class="right-indicators"></div>
        </a>
      </div>
      <div class="children" part="children" style="display: none;">
        <slot name="child-slot"></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-tree-item>
`;

exports[`Tree Item (unit tests) when initialized with required props should match the snapshot 1`] = `
<kv-tree-item expand-icon="kv-arrow-drop-up" label="Node Title" labels-size="small">
  <mock:shadow-root>
    <div class="node-container">
      <div class="node-wrapper">
        <a class="node-content-wrapper">
          <div class="labels labels-small">
            <kv-tooltip disabled="" text="Node Title" truncate="">
              <div class="title title-small">
                Node Title
              </div>
            </kv-tooltip>
          </div>
          <div class="right-indicators"></div>
        </a>
      </div>
      <div class="children" part="children" style="display: none;">
        <slot name="child-slot"></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-tree-item>
`;

exports[`Tree Item (unit tests) when initialized with selected attribute should match the snapshot 1`] = `
<kv-tree-item expand-icon="kv-arrow-drop-up" label="Node Title" labels-size="small" selected="">
  <mock:shadow-root>
    <div class="node-container">
      <div class="node-wrapper selected">
        <a class="node-content-wrapper selected">
          <div class="labels labels-small">
            <kv-tooltip disabled="" text="Node Title" truncate="">
              <div class="title title-small">
                Node Title
              </div>
            </kv-tooltip>
          </div>
          <div class="right-indicators"></div>
        </a>
      </div>
      <div class="children" part="children" style="display: none;">
        <slot name="child-slot"></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-tree-item>
`;
